kubernetes/istio/istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  namespace: default
  name: istio-ingress
spec:
  rules:
    - http:
        paths:
          - path: /task-api
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080
          - path: /order-api
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
          - path: /inventory-api
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8080
          - path: /employee-api
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axonserver-gui
                port:
                  number: 8024
